--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img src="gif.gif" class="gif-gif">
 </div>
 <br>
-<a href="yhy.html">
+<a href="about.html">
 <button class="y-b">Yes</button>
 </a>
 
